www-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www-service
  namespace: www
spec:
  type: ClusterIP
  selector:
    app: www
  ports:
    - protocol: TCP
      port: 8080
      name: www-svc-port
      targetPort: www-port
