www-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress
  namespace: www
  annotations:
    kubernetes.io/ingress.class: "nginx"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m                        
    nginx.ingress.kubernetes.io/rewrite-target: /    
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header 'Access-Control-Expose-Headers' 'access-token,expiry,token-type,uid,client,Access-Token,Expiry,Token-Type,Uid,Client';
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
  - host: "kubernetes.docker.internal"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:          
            name: www-service
            port: 
              number: 8080
